--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Heebo&family=Poppins:wght@500;600;700&display=swap');
+@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
+
+
 
 html, body {
   margin: 0;
@@ -7,11 +11,127 @@ html, body {
   background: #fff;
 }
 
+.imgTransparent {
+  -webkit-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+  background-color: transparent;
+}
+
+.grid {
+  position: fixed;
+  width: 100%;
+}
+.grid-line {
+  height: 100vh;
+  border-left: 1px solid #ccc;
+}
+
+.fixed-top {
+  position: absolute;
+  width: 600px;
+  height: 600px;
+  background: #00f1c9;
+  border-radius: 12px;
+  z-index: -1;
+  margin-top: -220px;
+  margin-left: 100px;
+}
+
+.lg-green {
+  width: 160px;
+  height: 160px;
+  background: #00f1c9;
+  border-radius: 12px;
+  margin-left: -80px;
+  margin-top: 200px;
+}
+.sm-green {
+  width: 60px;
+  height: 60px;
+  background: #00f1c9;
+  border-radius: 12px;
+  margin-left: -30px;
+  margin-top: 400px;
+}
+.sm-purple {
+  width: 60px;
+  height: 60px;
+  background: #5000f1;
+  border-radius: 12px;
+  margin-left: -30px;
+  margin-top: 400px;
+}
+.xs-green {
+  width: 60px;
+  height: 60px;
+  background: #00f1c9;
+  border-radius: 12px;
+  margin-left: -30px;
+  margin-top: 400px;
+}
+.md-green {
+  width: 120px;
+  height: 120px;
+  background: #00f1c9;
+  border-radius: 12px;
+  margin-left: -60px;
+  margin-top: 10px;
+}
+.lg-purple {
+  width: 80px;
+  height: 80px;
+  background: #5000f1;
+  border-radius: 12px;
+  margin-left: 57px;
+  margin-top: 60px;
+}
+
 .highest {
   width: 100%;
   height: 100vh;
   position: absolute;
-  background: url(parallax/background.jpg) no-repeat 50% 50%; 
+  background: url(parallax/back.png) no-repeat 50% 50%; 
+  background-size: cover;
+}
+
+.front {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background: url(parallax/front.png) no-repeat 50% 50%; 
+  background-size: cover;
+}
+
+.section {
+  position: relative;
+}
+section.san-francisco {
+  margin-top: 100px;
+}
+
+.absolute {
+  position: absolute;
+  width: 100%;
+  height: auto;
+  margin-top: 100px;
+}
+.absolute.above {
+  z-index: 2;
+}
+.absolute h2 {
+  font-size: 140px;
+  font-weight: 900;
+  letter-spacing: -0.04em;
+  color: #f0f0f0;
+  z-index: -1;
+}
+
+.veryfront {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background: url(parallax/veryfront.png) no-repeat 50% 50%; 
   background-size: cover;
 }
 
@@ -95,20 +215,6 @@ html, body {
     -webkit-text-stroke-width:2px;
 }
 
-.parallax {
-  /* The image used */
-  background-image: url('{{asset('media/pictures/background.jpg')}}');
-
-  /* Full height */
-  height: 100%; 
-
-  /* Create the parallax scrolling effect */
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
 .strokedtexthighlight {
     position: relative;
     top:50%
@@ -123,6 +229,7 @@ html, body {
     font-size: 6em;
     -webkit-text-fill-color: white;
     z-index: 1;
+
 }
 
 .card {
@@ -139,7 +246,7 @@ html, body {
 
 .card-image{
     grid-area: image;
-    background: url('{{asset('media/pictures/background.jpg')}}');
+    background: url(parallax/background.jpg);
     border-top-left-radius:15px;
     border-top-right-radius:15px;
     background-size:cover;
@@ -159,4 +266,93 @@ html, body {
 }
 .card-stats{
     grid-area:stats;
+}
+
+nav {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+}
+nav > p {
+  font-size: 3.7vh;
+  left: 4vw;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+nav > ul {
+  display: inline-block;
+  list-style-type: none;
+  padding: 0vh 3vw;
+  float: right;
+}
+nav > ul > li {
+  border: 1px solid transparent;
+  border-radius: 1vh;
+  padding: 1vh 1.2vw;
+  margin: 0;
+  display: inline-block;
+}
+nav > ul > li:hover {
+  border-radius: 1.5vh;
+  -webkit-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+}
+nav a {
+  text-decoration: none;
+}
+nav > ul > li > a {
+  font-size: 2.2vh;
+}
+.navTransparent {
+  -webkit-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+  background-color: transparent;
+}
+.navTransparent > p {
+  font-family: 'Poppins', sans-serif;
+}
+.navTransparent > ul > li:hover {
+  border: 1px solid white;
+}
+.navTransparent > ul > li > a {
+  -webkit-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+  color: white;
+  font-size: 2.5vh;
+}
+.navTransparent > p {
+  -webkit-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+  color: white;
+}
+.navColor {
+  -webkit-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+  background-color: #000000;
+  z-index: 99;
+}
+.navColor > ul > li:hover {
+  border: 1px solid white;
+}
+.navColor > ul > li > a {
+  -webkit-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+  color: white;
+}
+.navColor > p {
+  font-family: 'Poppins', sans-serif;
+  -webkit-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+  color: white;
 }
