--- a/style.css
+++ b/style.css
@@ -95,6 +95,19 @@ html, body {
   background-size: cover;
 }
 
+footer {
+  margin: 3vh 2vw;
+  display: block;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+}
+footer > a > img {
+  height: auto;
+  width: 6vh;
+  margin: 0vh 0.2vw;
+}
+
 .front {
   position: absolute;
   width: 100%;
@@ -132,6 +145,14 @@ section.san-francisco {
   width: 100%;
   height: 100vh;
   background: url(parallax/veryfront.png) no-repeat 50% 50%; 
+  background-size: cover;
+}
+
+.before {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background: url(parallax/before.png) no-repeat 50% 50%; 
   background-size: cover;
 }
 
@@ -199,6 +220,81 @@ section.san-francisco {
   text-align: center;
 }
 
+@media (min-width: 768px){
+  .strokedtext {
+    position: relative;
+    top:50%
+    left:50%
+    transform:translate(-50%,-50%);
+    margin-top:-75px;
+    padding: 0;
+    color: #00ffff;
+    font-family:sans-serif;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-size: 2em;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke-width:2px;
+
+}
+
+.strokedtexthighlight {
+    position: relative;
+    top:50%
+    left:50%
+    transform:translate(-50%,-50%);
+    margin-top:-70px;
+    padding: 0;
+    color: #000;
+    font-family:sans-serif;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-size: 2em;
+    -webkit-text-fill-color: white;
+    z-index: 1;
+    text-shadow: 1px 1px 25px black;
+
+}
+}
+
+.bgcolor{
+  width: 100%;
+  -webkit-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+  background-color: #D3D3D3;
+/*  background: linear-gradient(
+    139deg,
+    rgba(14, 85, 144, 1) 5%,
+    rgba(34, 129, 200, 1) 31%,
+    rgba(57, 169, 219, 1) 47%,
+    rgba(60, 177, 218, 1) 70%,
+    rgba(114, 216, 240, 1) 90%,
+    rgba(141, 222, 241, 1) 98%
+  );
+  background-size: 400% 400%;
+  animation: gradient 12s ease infinite;*/
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.bgcolor1{
+  -webkit-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+  background-color: grey;
+}
+
 .strokedtext {
     position: relative;
     top:50%
@@ -206,13 +302,14 @@ section.san-francisco {
     transform:translate(-50%,-50%);
     margin-top:-75px;
     padding: 0;
-    color: #000;
+    color: #00ffff;
     font-family:sans-serif;
     letter-spacing: 2px;
     text-transform: uppercase;
     font-size: 6em;
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke-width:2px;
+
 }
 
 .strokedtexthighlight {
@@ -229,16 +326,23 @@ section.san-francisco {
     font-size: 6em;
     -webkit-text-fill-color: white;
     z-index: 1;
+    text-shadow: 1px 1px 10px black;
 
+}
+
+.center {
+  margin-left:50%;
+  margin-right:50%;
+  width: 50%;
+  padding: 10px;
 }
 
 .card {
     display: grid;
     grid-template-columns: 300px;
     grid-template-rows: 210px 210px 80px;
-    grid-template-areas: "image" "text" "stats"
-    font-family: roboto;
-    border-radius: 18p;
+    grid-template-areas: "image" "text" "stats";
+    border-radius: 18px;
     background: white;
     box-shadow: 5px 5px 15 px rgba(0,0,0,0.9);
     text-align:center;
@@ -267,6 +371,49 @@ section.san-francisco {
 .card-stats{
     grid-area:stats;
 }
+
+.flexbox{
+  display:flex;
+}
+
+.aboutme-container{
+  display:flex;
+}
+
+.aboutme-container div{
+  padding:10px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.aboutme-container-box1{
+  width:100%;
+}
+
+.aboutme-container-box2{
+  width:100%;
+}
+
+projects-container{
+  display:flex;
+  justify-content:space-around;
+}
+
+projects-container div{
+  padding:10px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.projects-container-box1{
+    width:100%;
+}
+
+.projects-container-box2{
+    width:100%;
+}
+
+
 
 nav {
   position: fixed;
@@ -324,7 +471,6 @@ nav > ul > li > a {
   -webkit-transition-duration: 0.5s;
   -o-transition-duration: 0.5s;
   transition-duration: 0.5s;
-  color: white;
   font-size: 2.5vh;
 }
 .navTransparent > p {
@@ -355,4 +501,8 @@ nav > ul > li > a {
   -o-transition-duration: 0.5s;
   transition-duration: 0.5s;
   color: white;
+}
+
+.boredcontainer{
+  display:flex;
 }
