--- a/style.css
+++ b/style.css
@@ -387,7 +387,7 @@ section.san-francisco {
 }
 
 .aboutme-container-box1{
-  width:100%;
+  width:30%%;
 }
 
 .aboutme-container-box2{
@@ -401,8 +401,6 @@ projects-container{
 
 projects-container div{
   padding:10px;
-  margin-left: 10px;
-  margin-right: 10px;
 }
 
 .projects-container-box1{
@@ -422,6 +420,7 @@ nav {
   width: 100%;
 }
 nav > p {
+  color:white;
   font-size: 3.7vh;
   left: 4vw;
   margin: 0;
@@ -450,10 +449,11 @@ nav > ul > li:hover {
   transition-duration: 0.5s;
 }
 nav a {
-  text-decoration: none;
+  color:white;
 }
 nav > ul > li > a {
   font-size: 2.2vh;
+  color: #00ffff;
 }
 .navTransparent {
   -webkit-transition-duration: 0.5s;
