--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ html, body {
 
 .ground{
   background: url(media/bottom-background.png);
-  width: 500px;
+  width: 100%;
   height: 150px;
   position:absolute;
   top:580px;
