--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -29,7 +29,7 @@
 
     width: 20px;
     height: 20px;
-    padding: 0;
+    padding: 0px;
     -webkit-transform: translate(0, -50%);
     -ms-transform: translate(0, -50%);
     transform: translate(0, -50%);
