--- a/newstyle.css
+++ b/newstyle.css
@@ -399,11 +399,15 @@ main {
 	background:url(media/project1.png);
 }
 
+.img2{
+	background:url(media/img2.png);
+}
+
 .zoomimg{
 	background:url(media/zoom.jpg);
 }
 
-.img1, .zoomimg{
+.img1, .zoomim, .img2{
 	background-size: cover;
 	background-position: center center;
 	position: relative;
@@ -415,6 +419,10 @@ main {
 }
 
 .items:hover .img1{
+	transform: translateY(0);
+}
+
+.items:hover .img2{
 	transform: translateY(0);
 }
 
@@ -700,3 +708,121 @@ font-family: 'Montserrat', sans-serif;
   transition-duration: 0.5s;
   color: white;
 }
+
+/*flappy bird*/
+/* game*/
+.flap{
+  display:flex;
+}
+
+/*.flap div{
+  align-content: center;
+  align-items: center;
+}*/
+
+.button{
+  top: 100px;
+  left: 110px;
+   background-color: #ff6600;
+   color: #242424;
+   text-align: center;
+  font-size: 20px;
+  z-index: +10;
+  position: absolute;
+  cursor:pointer;
+  font-family: 'Montserrat', sans-serif;
+}
+
+/*.pixelbg{
+  max-width: 100%;
+  background: url(media/gamebg.png);
+}*/
+
+
+.game-container{
+  width:100%;
+  height:730px;
+  position: absolute;
+  background: url(media/fb-game-background.png);
+}
+
+.borderLeft{
+  width:60px;
+  height:730px;
+  position: absolute;
+  background-color: white;
+  z-index: +3;
+}
+
+.back-arrow  {
+        display: none;
+    }
+
+.gameText{
+  text-align: center;
+  top: 50px;
+  left: 250px;
+  right: 250px;
+  font-size: 30px;
+  z-index: +3;
+  position: absolute;
+  background color: #ff6600;
+}
+
+.borderRight{
+  width:60px;
+  height:730px;
+  position: absolute;
+  background-color: white;
+  z-index: +3;
+  left: 580px;
+}
+
+.borderTop{
+  width:660px;
+  height:50px;
+  position:absolute;
+  background-color: white;
+  z-index: +2;
+  top:-50px;
+}
+
+.sky{
+  background: url(media/fb-game-background.png);
+  width: 500px;
+  height:580px;
+  position: absolute;
+}
+
+.ground{
+  background: url(media/bottom-background.png);
+  width: 100%;
+  height: 150px;
+  position:absolute;
+  top:580px;
+  z-index: +1;
+}
+
+.bird{
+  background: url(media/flappy-bird.png);
+  position: absolute;
+  width:60px;
+  height:45px;
+}
+
+.obstacle{
+  background: url(media/flappybird-pipe.png);
+  width: 60px;
+  height: 300px;
+  position: absolute;
+}
+
+.topObstacle{
+  background: url(media/flappybird-pipe.png);
+  transform: rotate(180deg);
+  width: 60px;
+  height: 300px;
+  position: absolute;
+}
+/* game*/
+/*flappy bird*/
