--- a/newstyle.css
+++ b/newstyle.css
@@ -286,7 +286,6 @@ main {
 	position: relative;
 	padding: 0.5em;
 	border: 0;
-	left:70%;
 }
 
 .art-info p::after{
@@ -593,8 +592,7 @@ position:absolute;
 }
 
 
-@media(max-width: 1000px){
-
+@media(max-width: 720px){
 	.content{
 		margin-bottom: 35vh;
 	}
@@ -716,7 +714,7 @@ font-family: 'Montserrat', sans-serif;
   -webkit-transition-duration: 0.5s;
   -o-transition-duration: 0.5s;
   transition-duration: 0.5s;
-  font-size: 2.5vh;
+  font-size: clamp(2vh, 2.2vh, 2.5vh);
 }
 .navTransparent > p {
   -webkit-transition-duration: 0.5s;
@@ -739,6 +737,7 @@ font-family: 'Montserrat', sans-serif;
   -o-transition-duration: 0.5s;
   transition-duration: 0.5s;
   color: white;
+  font-size:clamp(2vh, 2.2vh, 2.5vh);
 }
 .navColor > p {
   font-family: 'Montserrat', sans-serif;
