--- a/newstyle.css
+++ b/newstyle.css
@@ -75,7 +75,7 @@ section{
 }
 
 .fphead{
-	height: 100vh;
+	height: 50vh;
 }
 
 
@@ -89,16 +89,20 @@ section{
 }
 
 .container{
-	padding: 100px;
 	width: 100%;
 }
-
+.cont1{
+	padding-left: 100px;
+	padding-right: 100px;
+}
 .about-parent{
-	margin-left: 30px;
-	margin-right: 30px;
+	margin-left: 100px;
+	margin-right: 100px;
 }
 
 .about{
+	padding-left: 100px;
+	padding-right: 100px;
 	display: inline-block;
 	background:transparent;
 	color: white;
@@ -593,7 +597,6 @@ footer {
 position:relative;
 width: 100%;
 height:auto;
-padding:10px,100px;
 background:#111;
 display:flex;
 justify-content: space-between;
@@ -604,6 +607,7 @@ footer .container {
 	justify-content: space-between;
 	flex-wrap: wrap;
 	flex-direction: row;
+	padding:100px;
 }
 
 footer .container .sec{
@@ -771,6 +775,11 @@ position:absolute;
 
 @media(max-width: 720px){
 
+.cont1{
+	padding-left: 30px;
+	padding-right: 30px;
+}
+
 footer .container p{
 	font-size:20px;
 }
@@ -779,7 +788,7 @@ footer .container h2{
 	font-size:30px;
 }
 
-footer{
+footer .container{
 	padding:40px;
 }
 
@@ -869,6 +878,8 @@ footer .container .sec.aboutme,.quicklinks{
 	max-height: 200px;
 	border-radius: 50%;
 	object-fit: contain;
+	margin-top:50px;
+	margin-left: 40px;
 }
 
 }
